--- a/index.html
+++ b/index.html
@@ -4,30 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Home</title>
 </head>
-<body style="background-color: #fad0c4;
-background-image: linear-gradient(315deg, #fad0c4 0%, #f3d8f3 74%);">
+<body style="font-family:'Libre Baskerville', serif;">
     <nav class="navbar navbar-expand-sm py-0 d-flex" >
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <img src="rileyy-removebg-preview.png" alt=""height = "85" width = "85">
+                <img src="assets/rileyy-removebg-preview.png" alt=""height = "85" width = "85">
             </a>
           </div>
             <div>
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="huh.html">Huh?</a>
-                </li>
-              </ul>
             </div>
         </div>
       </nav>
+      <div class="container" style="padding-top: 100px;">
+        <div class="row">
+          <div class="col">
+            <a href="grades/9th.html">9th Grade (14-15)</a>
+          </div>
+          <div class="col">
+            10th Grade (15-16)
+          </div>
+          <div class="col">
+            11th Grade (16-17)
+          </div><div class="col">
+            12th Grade (17-18)
+          </div>
+        </div>
 </body>
 </html>
